[project]
name = "agent-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Sri Aradhyula",email = "sraradhy@cisco.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = {text = "Apache-2.0"}
dependencies = [
    "langchain-openai (>=0.3.14,<0.4.0)",
    "langgraph (>=0.3.31,<0.4.0)",
    "langgraph-supervisor (>=0.0.17,<0.0.18)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-anthropic (>=0.3.12,<0.4.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
    "agntcy-acp (>=1.1.2,<2.0.0)",
    "httpx-sse (>=0.4.0,<0.5.0)",
    "langgraph-cli[inmem] (>=0.2.7,<0.3.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "cisco-outshift-agent-utils (>=0.0.2,<0.0.3)"
]

[tool.poetry]
packages = [{include = "agent_template"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
