[project]
name = "agent_weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "agntcy-app-sdk>=0.1.1",
]

[tool.poetry.scripts]
agent_weather = "agent_weather.main:main"

[tool.ruff]
# Allow lines to be as long as 300.
line-length = 300
# Number of spaces per indentation level
indent-width = 2

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F403"]
