[project]
name = "kb-rag"
version = "0.1.0"
description = "A RAG agent that ingests documentation from any URL and answers questions using RAG with Milvus."
authors = [
    {name = "Rehan Agrawal", email = "rehagraw@cisco.com"},
    {name = "Shubham Bakshi", email = "subbaksh@cisco.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.3.60",
    "langchain-milvus>=0.1.10",
    "langchain-openai>=0.3.18",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "a2a-sdk==0.2.16",
    "pymilvus>=2.3.6",
    "cnoe-agent-utils>=0.1.4",
    "pydantic>=2.0.0",
    "a2a>=0.0.1",
    "aiohttp>=3.12.15",
    "aiofile>=3.9.0",
    "langchain-community",
    "uvicorn>=0.35.0",
    "fastapi[standard]>=0.116.1",
    "redis>=5.0.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
] 
