[project]
name = "mcp-argocd"
version = "0.1.0"
description = "ArgoCD MCP Server"
license = "Apache-2.0"
authors = [
  { name = "Sri Aradhyula", email = "sraradhy@cisco.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastmcp==2.13.3",
  "httpx==0.28.1",
  "mcp==1.12.3",
  "pydantic==2.12.5",
  "python-dotenv==1.1.0",
]

[project.scripts]
mcp-argocd = "mcp_argocd.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"