[project]
name = "mcp-backstage"
version = "0.1.0"
description = "Backstage MCP Server"
license = "Apache-2.0"
authors = [
  { name = "Rehan Agrawal", email = "rehagraw@cisco.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.24.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "mcp>=1.12.3",
  "fastmcp>=2.11.1",
  "dotenv>=0.9.9",
]

[tool.poetry.scripts]
mcp_backstage = "mcp_backstage.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
