[project]
name = "mcp-backstage"
version = "0.1.0"
description = "Backstage MCP Server"
license = "Apache-2.0"
authors = [
  { name = "Rehan Agrawal", email = "rehagraw@cisco.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "httpx==0.28.1",
  "python-dotenv==1.2.1",
  "pydantic==2.12.5",
  "mcp==1.21.0",
  "fastmcp==2.13.3",
  "pyyaml==6.0.3",
  "typing-extensions==4.15.0",
]

[tool.poetry.scripts]
mcp_backstage = "mcp_backstage.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
