[project]
name = "mcp-confluence"
version = "0.1.0"
description = "Confluence MCP Server"
license = "Apache-2.0"
authors = [
  { name = "Sri Aradhyula", email = "sraradhy@cisco.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "httpx==0.28.1",
  "python-dotenv==1.2.1",
  "pydantic==2.12.5",
  "mcp==1.21.0",
  "fastmcp==2.13.3",
  "typing-extensions==4.15.0"
]
[tool.poetry.scripts]
mcp_argocd = "mcp_confluence.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"