[project]
name = "mcp-jira"
version = "0.1.0"
description = "Generated MCP server for jira from OpenAPI specification"
authors = [
  { name = "Sri Aradhyula", email = "sraradhy@cisco.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "httpx==0.28.1",
  "python-dotenv==1.2.1",
  "pydantic==2.12.5",
  "mcp==1.21.0",
  "fastmcp==2.13.3",
  "python-dateutil==2.9.0.post0",
  "keyring==25.6.0",
  "typing-extensions==4.15.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
]

[project.scripts]
mcp-argocd = "mcp_argocd.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"