[project]
name = "mcp_splunk"
version = "0.1.0"
description = "Splunk MCP Server"
readme = "README.md"
authors = [
    { name = "CNOE Contributors", email = "info@cnoe.io" }
]
license = "Apache-2.0"
requires-python = ">=3.13,<4.0"
dependencies = [
  "httpx==0.28.1",
  "python-dotenv==1.2.1",
  "pydantic==2.12.5",
  "mcp==1.21.0",
  "fastmcp==2.13.3",
  "typing-extensions==4.15.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "mypy",
  "pytest",
  "ruff",
]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.13"
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_no_return = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"