[project]
name = "mcp-petstore"
version = "0.1.0"
description = "PetStore MCP Server"
license = "Apache-2.0"
authors = [
  { name = "Sri Aradhyula", email = "sraradhy@cisco.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.24.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "mcp>=1.12.3",
  "fastmcp>=2.11.1"
]

[project.scripts]
mcp-petstore = "mcp_petstore.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"