[project]
name = "mcp_webex"
description = "A Model Context Protocol server providing tools to act with Webex via LLMs"
authors = [
    { name = "Torben Tretau", email = "ttretau@cisco.com" }
]
dynamic = [
    "version"
]
readme = "README.md"
keywords = ["webex", "mcp", "llm", "automation"]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "click>=8.1.7",
    "mcp>=1.13.1",
    "pydantic>=2.0.0",
    "httpx>=0.28.1"
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "ruff>=0.11.11",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "hatch>=1.0.0",]

[tool.hatch.version]
path = "mcp_webex/__about__.py"

[project.scripts]
mcp-server-webex = "mcp_webex:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.hatch.build.targets.wheel]
packages = ["mcp_webex"]