[project]
name = "agent-rag"
version = "0.1.0"
description = "RAG agent using LangChain ReAct framework"
readme = "README.md"
authors = [
    { email = "subbaksh@cisco.com" }
]
requires-python = ">=3.13, <4.0"
dependencies = [
    "click>=8.2.1",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-aws>=0.2.26",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langmem>=0.0.27",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
    "cnoe-agent-utils==0.3.2",
    "agntcy-app-sdk==0.4.0",
    "a2a-sdk==0.3.0",
    "common",
]

[project.scripts]
agent-rag = "agent_rag:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
common = { path = "../common" }

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
]