[project]
name = "common"
version = "0.1.0"
description = "Common code for RAG"
readme = "README.md"
authors = [
    { email = "subbaksh@cisco.com" }
]
requires-python = ">=3.13, <4.0"
dependencies = [
    "cymple>=0.12.0",
    "neo4j>=5.28.1",
    "pydantic>=2.11.7",
    "redis>=6.2.0",
    # Embedding providers - all included in Docker image
    "langchain-openai>=0.3.18",
    "langchain-aws>=0.2.24",
    "langchain-cohere>=0.3.0",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
